Fix: Add: endpoint GET /api/locais/rota?rota= por rota_frontend